# RareCell

./: .gitignore  CMakeLists.txt  CMakePresets.json
cfg/: config.json
src/: main.cpp
src/cluster/: leiden.cpp  leiden.hpp
src/common/: types.hpp
src/config/: filter_config.cpp  filter_config.hpp
src/cuda/: filter_kernels.cu  kernels.cu  metrics_cuda.cu  metrics_cuda.hpp
src/filter/: filter.cpp  filter.hpp
src/graph/: binarize.cpp  binarize.hpp  knn.cpp  knn.hpp  mix.cpp  mix.hpp  selection.cpp  selection.hpp
src/io/: h5ad_reader.cpp  h5ad_reader.hpp
src/metrics/: fano.cpp  fano.hpp  gini.cpp  gini.hpp  lowess.cpp  lowess.hpp  palma.cpp  palma.hpp
src/refine/: refine_pca_cosine.cpp  refine_pca_cosine.hpp
